Switch to NGSI-LD
