# server/api/controllers/ranking/router.ts
@@ -1,8 +1,8 @@
 import express from 'express';
-import controller from './controller'
 import { Controller } from './controller'
+let c = new Controller(process.env.INDEXER_URL);
 export default express.Router()
     // .post('/', controller.create)
     // .get('/', controller.all)
     // .get('/:id', controller.byId)
-    .get('/near', controller.near);
+    .get('/entities', c.near.bind(c));
